# obsigil-rs

./: .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  TODO.md
obsigil/: Cargo.toml  README.md
obsigil-cli/: Cargo.toml  README.md
obsigil-cli/src/: main.rs
obsigil/src/: aead.rs  encoding.rs  error.rs  key.rs  lib.rs  lowlevel.rs  mint.rs  reserved.rs  serial.rs  token.rs  types.rs  verify.rs
obsigil/tests/: conformance.rs  roundtrip.rs
