[package]
name = "obsigil-cli"
version = "0.2.0"
edition = "2021"
rust-version = "1.83.0"
license = "MIT OR Apache-2.0"
description = "Command-line tool for the obsigil mandate-token format: mint, verify, open, forward, and the byte-level conformance ops"
repository = "https://gitlab.com/obsigil/obsigil-rs"
documentation = "https://gitlab.com/obsigil/obsigil-rs"
keywords = ["obsigil", "jwt", "token", "mandate", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "obsigil"
path = "src/main.rs"

[dependencies]
obsigil = { path = "../obsigil", version = "0.2.0", features = ["conformance", "gcm-siv"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
