[package]
name = "obsigil-cli"
version = "0.3.0"
edition = "2021"
rust-version = "1.83.0"
license = "MIT OR Apache-2.0"
description = "Command-line tool for the obsigil mandate-token format: mint, verify, open, forward, and the byte-level conformance ops"
repository = "https://gitlab.com/obsigil/obsigil-rs"
documentation = "https://gitlab.com/obsigil/obsigil-rs"
keywords = ["obsigil", "jwt", "token", "mandate", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "obsigil"
path = "src/main.rs"

[dependencies]
obsigil = { path = "../obsigil", version = "0.3.0", features = ["conformance", "gcm-siv"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
# `generate-key` draws 64 random bytes for a provisioning key; the library's
# MandateKey never exposes its bytes, so the CLI sources them itself.
getrandom = "0.2"
